# fendtastic

./: .env.example  .gitignore  CONTRIBUTING.md  Control-Authority.md  I3X_SERVER_IMPLEMENTATION.md  LICENSE  Makefile  README.md  dev.sh  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/api-server/: Cargo.toml
backend/api-server/src/: api_routes.rs  authority_handlers.rs  authority_service.rs  binding_handlers.rs  binding_validation.rs  control_plane_status.rs  db.rs  driver_backend.rs  driver_catalog.rs  driver_handlers.rs  handlers.rs  i3x_handlers.rs  main.rs  mesh_handlers.rs  native_s7_backend.rs  neuron_backend.rs  neuron_client.rs  pea_handlers.rs  pol_handlers.rs  runtime_handlers.rs  runtime_status.rs  runtime_store.rs  scenario_handlers.rs  simulator.rs  state.rs  tia_importer.rs  timeseries_handlers.rs  websocket.rs
backend/data/: test-tia-export.xml
backend/data/authority/: 9af4ab5f-0691-4b04-9150-f3f2b29e329a.json
backend/data/drivers/: d28fe37f-7554-4f11-8cff-d2b25677a2cc.json  e667bbb0-5cd1-4e09-848c-be439af7b714.json
backend/data/pea-configs/: feeb8045-64c6-436a-9d57-e9dcebd6c94d.json
backend/data/pol/: alarms.json
backend/data/runtime-nodes/: cfaf0bc1-3607-41ea-94ca-c27156c6bbfe.json
backend/eva-ics-connector/: Cargo.toml
backend/eva-ics-connector/src/: bridge.rs  eva_client.rs  main.rs  pea_deployer.rs
backend/neuron-connector/: Cargo.toml
backend/neuron-connector/src/: config_sync.rs  main.rs  neuron_client.rs  runtime_bridge.rs
backend/shared/: Cargo.toml
backend/shared/src/: lib.rs  mtp.rs
backend/shared/src/domain/: authority.rs  binding.rs  capability.rs  driver.rs  mod.rs  pea.rs  runtime.rs
backend/zenoh-bridge/: Cargo.toml
backend/zenoh-bridge/src/: main.rs  publisher.rs  subscriber.rs
config/: backend.toml  zenoh-router.json5
config/eva-ics/: entrypoint.sh  svc-tpl-mcp.yml
data/pea-configs/: 9af4ab5f-0691-4b04-9150-f3f2b29e329a.json  d0f5df66-6f07-4e6d-a7bd-b8e76f2a57d5.json
data/pol/: alarms.json  topology.json
data/recipes/: bf14dc7e-d0ea-43da-9231-6a4268ede56c.json
desired-look-prototype/: index.html  styles.css
docs/: Control-Authority.md  I3X_SERVER_IMPLEMENTATION.md  MURPH_SPEC.md  PLCTags.xlsx  architecture.md  capability-extension-contract.md  ceres-station-integration-spec.md  configuration.md  deployment.md  development.md  frontend-theme-shirewood-spec.md  harness-contract.md  theme-preview-ent-hobbit.html
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/heptapod-assets/models/: factory_ex_1.glb  factory_ex_2.glb  factory_ex_3.glb  factory_ex_4.glb  server.glb
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: Coobie.tsx  Header.tsx  IsometricView.tsx  SpotValues.tsx  SwimlaneDiagram.tsx  TimeSeriesChart.tsx
frontend/src/components/heptapod/: AlarmCenter.tsx  IsometricWorkbench.tsx  ModuleList.tsx  PEAList.tsx  PeaConnectionsDesigner.tsx  RecipeManager.tsx
frontend/src/components/layout/: EntShellScaffold.tsx
frontend/src/components/mesh/: NamespaceBrowser.tsx  NetworkOverview.tsx  NodeManager.tsx  RouterConfig.tsx
frontend/src/components/openbridge/: Pump.tsx  Tank.tsx  Valve.tsx
frontend/src/components/pea-launcher/: ActiveElementEditor.tsx  DurinsForgeLauncher.tsx  EngineeringView.tsx  IndicatorTable.tsx  ParameterTable.tsx  RuntimeControl.tsx  ServiceEditor.tsx  SettingsView.tsx
frontend/src/components/runtime/: AuthorityPanel.tsx  BindingDesigner.tsx  BindingHistoryPanel.tsx  DriverCatalogPanel.tsx  DriverInstanceEditor.tsx  DriverStatusPanel.tsx  InspectorPanel.tsx  RuntimeHealthPanel.tsx  RuntimeNodeEditor.tsx  RuntimeNodeList.tsx  RuntimeShell.tsx  SchemaForm.tsx  SectionNav.tsx  TagEditorPanel.tsx
frontend/src/pages/: Dashboard.tsx  Heptapod.tsx  HeptapodMesh.tsx  MarsHabitat.tsx  PEALauncher.tsx  RuntimeStudio.tsx
frontend/src/services/: apiService.ts  zenohService.ts
frontend/src/styles/: openbridge-mars.css
frontend/src/themes/: fendtTheme.ts  murphTheme.ts
frontend/src/types/: authority.ts  binding.ts  driver.ts  evaIcs.ts  mesh.ts  mtp.ts  pea.ts  recipe.ts  runtime.ts  timeseries.ts
ganymede-explainer/: package-lock.json
ganymede-explainer/ganymede-explainer/: package-lock.json  package.json
ganymede-explainer/ganymede-explainer/src/: App.css  App.jsx  index.css
ganymede-explainer/ganymede-explainer/src/components/: DataDebris.jsx  DataMonolith.jsx  DigitalOoze.jsx  GanymedeMoon.jsx  (+2 more)
mars-sim-3.10 (1).0/mars-sim-ui/: MarsProject -new 864x default scenario.launch
tools/: coobie  cut_entmoot_frame.py
(+2 files in other folders)
