[package]
name = "api-server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
actix-web.workspace = true
actix-cors.workspace = true
actix-rt.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
zenoh.workspace = true

shared = { path = "../shared" }

[[bin]]
name = "api-server"
path = "src/main.rs"
