[package]
name = "eva-ics-connector"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zenoh.workspace = true
chrono.workspace = true
async-trait.workspace = true

shared = { path = "../shared" }

[[bin]]
name = "eva-ics-connector"
path = "src/main.rs"
