[package]
name = "neuron-connector"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
reqwest.workspace = true
uuid.workspace = true
shared = { path = "../shared" }

[[bin]]
name = "neuron-connector"
path = "src/main.rs"
