[package]
name = "zenoh-bridge"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
zenoh.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true

shared = { path = "../shared" }

[[bin]]
name = "zenoh-bridge"
path = "src/main.rs"
